# PCL-OpenCL

./: CMakeLists.txt  README.md
data/: gt.txt  param.yaml
kernel/: depth2pointcloud.cl  rgb2gray.cl
src/: main  main.cpp  test.cpp  test_cl.cpp
